network-policies/echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo    
  name: echo

spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo
  strategy: {}
  template:
    metadata:
      labels:
        app: echo
        testing: "false"

    spec:
      nodeSelector:
        kubernetes.io/hostname: minikube

      containers:
      - image: gcr.io/google-containers/echoserver:1.10
        name: echoserver
        resources:
          limits:
            memory: "50Mi"
            cpu: "500m"
          requests:
            memory: "30Mi"
            cpu: "100m"
        
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
