network-policies/echo-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testing-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      testing: "false"

  policyTypes:
  - Ingress

  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.0.0/16
        except:
        - 192.168.64.0/24
